Some more cleanup
* Removes a whole lot of warnings